refactor(game): 重构游戏 URL 获取逻辑
- 将 getUrl 方法从 GET 请求改为 POST 请求
- 增加 type 参数以区分游戏平台类型
- 优化了对不同游戏提供商的处理逻辑- 新增处理 NewNG 提供商的单独方法
- 改进了玩家注册和登录的流程- 修复了一些潜在的 bug 和异常处理